# Deliverator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/deliverator/: __init__.py  app.py
