[project]
name = "deliverator"
version = "0.1.0"
description = "The Deliverator - Pizza in thirty minutes or it's free"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deliverator"]
